# fintools

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py
src/fintools/: __init__.py  cli.py  compound_interest.py
tests/: __init__.py  test_compound_interest.py
